<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/normal_padding"
    >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                android:text="@string/currenttie"
                style="@style/RythmTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

                <TextView
                android:id="@+id/current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RythmTextStyle"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:text="@string/currentmode"
                    style="@style/RythmTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/ringmodetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/RythmTextStyle"
                    />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TextView
                android:text="@string/settime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RythmTextStyle"
                />

                <TextView
                android:id="@+id/set_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RythmTextStyle"
                />
        </LinearLayout>


        <Button
            android:id="@+id/settime_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/RythmTextStyle"
            android:text="@string/settimebtn"
            />

</LinearLayout>
